--- a/HappyWayApp/ClientApp/src/app/components/home/home.component.html
+++ b/HappyWayApp/ClientApp/src/app/components/home/home.component.html
@@ -46,3 +46,6 @@
     <button mat-raised-button color="primary" (click)="save()">Сохранить</button>
   </div>
 </ng-container>
+<ng-container *ngIf="!cardMembers || cardMembers.length === 0">
+  <span>Нет данных об участниках мероприятия.</span>
+</ng-container>
