--- a/HappyWayApp/ClientApp/src/app/components/dialogs/user-dialog/user-dialog.component.html
+++ b/HappyWayApp/ClientApp/src/app/components/dialogs/user-dialog/user-dialog.component.html
@@ -6,13 +6,13 @@
         <input matInput formControlName="username" placeholder="Имя пользователя" required>
       </mat-form-field>
       <mat-form-field>
-        <input matInput formControlName="password" placeholder="Пароль" required>
+        <input matInput type="password" formControlName="password" placeholder="Пароль" required>
       </mat-form-field>
       <mat-form-field>
-        <input matInput formControlName="firstName" placeholder="Фамилия" required>
+        <input matInput formControlName="firstName" placeholder="Фамилия">
       </mat-form-field>
       <mat-form-field>
-        <input matInput formControlName="lastName" placeholder="Имя" required>
+        <input matInput formControlName="lastName" placeholder="Имя">
       </mat-form-field>
     </div>
   </mat-dialog-content>
