--- a/HappyWayApp/ClientApp/src/app/components/sex-select/sex-select.component.html
+++ b/HappyWayApp/ClientApp/src/app/components/sex-select/sex-select.component.html
@@ -1,5 +1,5 @@
-<mat-form-field floatPlaceholder="never">
-  <mat-select [formControl]="sex">
+<mat-form-field class="sex-control" floatPlaceholder="never">
+  <mat-select class="sex-control" [formControl]="sex">
     <mat-select-trigger>
       <div class="sex-label">
         <mat-icon [svgIcon]="sexItems[sex.value].icon"></mat-icon>
