--- a/HappyWayApp/ClientApp/src/app/components/dialogs/event-dialog/event-dialog.component.html
+++ b/HappyWayApp/ClientApp/src/app/components/dialogs/event-dialog/event-dialog.component.html
@@ -3,12 +3,16 @@
   <mat-dialog-content>
     <div class="dialog-container">
       <mat-form-field>
-        <input matInput formControlName="name" placeholder="Название" required>
-      </mat-form-field>
-      <mat-form-field>
         <input matInput [matDatepicker]="picker" formControlName="date" placeholder="Дата" required>
         <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
         <mat-datepicker #picker></mat-datepicker>
+      </mat-form-field>
+      <mat-form-field>
+        <mat-select formControlName="name" placeholder="Название" required cdkFocusInitial>
+          <mat-option *ngFor="let group of groups" [value]="group">
+            {{group}}
+          </mat-option>
+        </mat-select>
       </mat-form-field>
     </div>
   </mat-dialog-content>
