--- a/HappyWayApp/ClientApp/src/app/components/dialogs/user-dialog/user-dialog.component.html
+++ b/HappyWayApp/ClientApp/src/app/components/dialogs/user-dialog/user-dialog.component.html
@@ -1,18 +1,23 @@
-<form [formGroup]="form" (ngSubmit)="submit(form)">
-  <h1 mat-dialog-title>Пользователь</h1>
+<form [formGroup]="form" (ngSubmit)="submit(form)" autocomplete="off">
+  <h1 mat-dialog-title>Хостес</h1>
   <mat-dialog-content>
     <div class="dialog-container">
+      <!--  fake fields are a workaround for chrome/opera autofill getting the wrong fields -->
       <mat-form-field>
-        <input matInput formControlName="username" placeholder="Имя пользователя" required>
+        <input matInput formControlName="username" placeholder="Имя" required autocomplete="nope">
       </mat-form-field>
       <mat-form-field>
-        <input matInput type="password" formControlName="password" placeholder="Пароль" required>
+        <input matInput type="password" formControlName="password" placeholder="Пароль" autocomplete="new-password"
+               [required]="!editMode">
       </mat-form-field>
       <mat-form-field>
         <input matInput formControlName="displayName" placeholder="ФИО">
       </mat-form-field>
       <mat-form-field>
         <input matInput formControlName="city" placeholder="Город" [matAutocomplete]="auto">
+      </mat-form-field>
+      <mat-form-field>
+        <input matInput formControlName="phoneNumber" placeholder="Номер телефона">
       </mat-form-field>
     </div>
   </mat-dialog-content>
