--- a/HappyWayApp/ClientApp/src/app/components/events/events.component.html
+++ b/HappyWayApp/ClientApp/src/app/components/events/events.component.html
@@ -14,20 +14,22 @@
   <ng-container matColumnDef="edit">
     <th mat-header-cell *matHeaderCellDef></th>
     <td mat-cell *matCellDef="let ev">
-      <button mat-icon-button (click)="edit(ev)">
+      <button mat-icon-button (click)="$event.stopPropagation(); edit(ev)">
         <mat-icon>edit</mat-icon>
       </button>
     </td>
   </ng-container>
   <ng-container matColumnDef="delete">
     <th mat-header-cell *matHeaderCellDef></th>
-    <td mat-cell *matCellDef="let event">
-      <button mat-icon-button (click)="delete(event)">
+    <td mat-cell *matCellDef="let ev">
+      <button mat-icon-button (click)="$event.stopPropagation(); delete(ev);">
         <mat-icon>delete</mat-icon>
       </button>
     </td>
   </ng-container>
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  <tr mat-row *matRowDef="let event; columns: displayedColumns;"
+      class="event-row"
+      (click)="eventClick(event)"></tr>
 </table>
