--- a/HappyWayApp/ClientApp/src/app/components/users/users.component.html
+++ b/HappyWayApp/ClientApp/src/app/components/users/users.component.html
@@ -1,3 +1,6 @@
+<div class="table-controls">
+  <button mat-raised-button (click)="add()">Добавить хостес</button>
+</div>
 <table mat-table *ngIf="users && users.length > 0" [dataSource]="users"
        class="mat-elevation-z8">
   <ng-container matColumnDef="username">
@@ -12,6 +15,10 @@
     <th mat-header-cell *matHeaderCellDef>Город</th>
     <td mat-cell *matCellDef="let user">{{user.city}}</td>
   </ng-container>
+  <ng-container matColumnDef="phoneNumber">
+    <th mat-header-cell *matHeaderCellDef>Телефон</th>
+    <td mat-cell *matCellDef="let user">{{user.phoneNumber}}</td>
+  </ng-container>
   <ng-container matColumnDef="edit">
     <th mat-header-cell *matHeaderCellDef></th>
     <td mat-cell *matCellDef="let user">
@@ -23,7 +30,7 @@
   <ng-container matColumnDef="delete">
     <th mat-header-cell *matHeaderCellDef></th>
     <td mat-cell *matCellDef="let user">
-      <button mat-icon-button (click)="delete(user)">
+      <button *ngIf="user.id !== currentUser.id" mat-icon-button (click)="delete(user)">
         <mat-icon>delete</mat-icon>
       </button>
     </td>
