--- a/HappyWayApp/ClientApp/src/app/components/dialogs/event-dialog/event-dialog.component.html
+++ b/HappyWayApp/ClientApp/src/app/components/dialogs/event-dialog/event-dialog.component.html
@@ -14,6 +14,9 @@
           </mat-option>
         </mat-select>
       </mat-form-field>
+      <mat-form-field>
+        <input matInput type="url" formControlName="docUrl" placeholder="URL документа">
+      </mat-form-field>
     </div>
   </mat-dialog-content>
   <mat-dialog-actions>
