--- a/HappyWayApp/ClientApp/src/app/components/layout/layout.component.css
+++ b/HappyWayApp/ClientApp/src/app/components/layout/layout.component.css
@@ -3,7 +3,7 @@
 }
 
 .sidenav {
-  width: 200px;
+  width: 270px;
   box-shadow: 3px 0 6px rgba(0,0,0,.24);
 }
 
@@ -41,6 +41,10 @@ main {
 
 .mat-datepicker-toggle-active {
   color: #ff8cbe;
+}
+
+.mat-action-list {
+  padding-top: 0;
 }
 
 @media only screen and (max-width: 1200px) {
