--- a/HappyWayApp/ClientApp/src/app/components/layout/layout.component.html
+++ b/HappyWayApp/ClientApp/src/app/components/layout/layout.component.html
@@ -41,7 +41,7 @@
       <ng-container *ngIf="loggedIn">
         <mat-divider></mat-divider>
         <mat-action-list>
-          <button mat-list-item (click)="logout()">
+          <button mat-list-item (click)="shutdown()">
             <mat-icon>power_off</mat-icon>
             <span class="nav-caption">Завершить работу</span>
           </button>
