--- a/HappyWayApp/ClientApp/src/app/components/events/events.component.html
+++ b/HappyWayApp/ClientApp/src/app/components/events/events.component.html
@@ -11,6 +11,10 @@
     <th mat-header-cell *matHeaderCellDef>Дата</th>
     <td mat-cell *matCellDef="let ev">{{ev.date | date}}</td>
   </ng-container>
+  <ng-container matColumnDef="user">
+    <th mat-header-cell *matHeaderCellDef>Пользователь</th>
+    <td mat-cell *matCellDef="let ev">{{ev.user}}</td>
+  </ng-container>
   <ng-container matColumnDef="edit">
     <th mat-header-cell *matHeaderCellDef></th>
     <td mat-cell *matCellDef="let ev">
