--- a/HappyWayApp/ClientApp/src/app/components/results/results.component.css
+++ b/HappyWayApp/ClientApp/src/app/components/results/results.component.css
@@ -3,8 +3,15 @@
   flex-wrap: wrap;
 }
 
-.container > mat-card {
+.mat-card {
+  display:flex;
+  flex-direction: column;
   margin: 5px;
+}
+
+.mat-card-content {
+  flex-grow: 1;
+  overflow: auto;
 }
 
 a {
