--- a/HappyWayApp/ClientApp/src/app/components/event-members/event-members.component.html
+++ b/HappyWayApp/ClientApp/src/app/components/event-members/event-members.component.html
@@ -40,5 +40,5 @@
   </table>
 </ng-container>
 <ng-container *ngIf="!eventId">
-  <span>Нет данных о текущем событии.</span>
+  <span>Нет данных о текущем мероприятии.</span>
 </ng-container>
