--- a/HappyWayApp/ClientApp/src/app/components/events/events.component.html
+++ b/HappyWayApp/ClientApp/src/app/components/events/events.component.html
@@ -15,6 +15,22 @@
     <th mat-header-cell *matHeaderCellDef>Пользователь</th>
     <td mat-cell *matCellDef="let ev">{{ev.user}}</td>
   </ng-container>
+<!--  <ng-container matColumnDef="active">-->
+<!--    <th mat-header-cell *matHeaderCellDef></th>-->
+<!--    <td mat-cell *matCellDef="let ev">-->
+<!--      <mat-radio-button (click)="$event.stopPropagation();"-->
+<!--                        [value]="ev"-->
+<!--                        [checked]="currentEvent?.id === ev?.id"-->
+<!--                        [disabled]="ev.completed"-->
+<!--                        (change)="currentEventChange($event)"></mat-radio-button>-->
+<!--    </td>-->
+<!--  </ng-container>-->
+  <ng-container matColumnDef="active">
+    <th mat-header-cell *matHeaderCellDef></th>
+    <td mat-cell *matCellDef="let ev">
+      <mat-icon *ngIf="currentEvent?.id === ev?.id">check</mat-icon>
+    </td>
+  </ng-container>
   <ng-container matColumnDef="edit">
     <th mat-header-cell *matHeaderCellDef></th>
     <td mat-cell *matCellDef="let ev">
@@ -33,7 +49,7 @@
   </ng-container>
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row *matRowDef="let event; columns: displayedColumns;"
-      class="event-row"
-      (click)="eventClick(event)"></tr>
+  <tr mat-row *matRowDef="let ev; columns: displayedColumns;"
+      [ngClass]="{'event-row': !ev.completed}"
+      (click)="eventClick(ev)"></tr>
 </table>
