Fixed Event issues. Added Shutdown button

--- a/HappyWayApp/ClientApp/src/app/components/dialogs/user-dialog/user-dialog.component.html
+++ b/HappyWayApp/ClientApp/src/app/components/dialogs/user-dialog/user-dialog.component.html
@@ -1,5 +1,5 @@
 <form [formGroup]="form" (ngSubmit)="submit(form)" autocomplete="off">
-  <h1 mat-dialog-title>Хостес</h1>
+  <h1 mat-dialog-title>Пользователь</h1>
   <mat-dialog-content>
     <div class="dialog-container">
       <mat-form-field>
