--- a/HappyWayApp/ClientApp/src/app/components/layout/layout.component.css
+++ b/HappyWayApp/ClientApp/src/app/components/layout/layout.component.css
@@ -26,6 +26,10 @@ main {
   padding-left: 6px;
 }
 
+.mat-button, .mat-icon-button {
+  margin-left: 5px;
+}
+
 ::ng-deep .block-ui-spinner {
   top: 50% !important;
 }
@@ -45,6 +49,24 @@ main {
 
 .mat-action-list {
   padding-top: 0;
+}
+
+@media only screen and (max-width: 768px) {
+  .layout-button {
+    display: none;
+  }
+  .layout-small-button {
+    display: block;
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  .layout-button {
+    display: block;
+  }
+  .layout-small-button {
+    display: none;
+  }
 }
 
 @media only screen and (max-width: 1200px) {
