--- a/HappyWayApp/ClientApp/src/app/components/layout/layout.component.html
+++ b/HappyWayApp/ClientApp/src/app/components/layout/layout.component.html
@@ -49,7 +49,7 @@
       </ng-container>
     </mat-nav-list>
   </mat-sidenav>
-  <mat-sidenav-content>
+  <mat-sidenav-content class="sidenav-content">
     <mat-toolbar color="primary">
       <button type="button"
               aria-label="Toggle sidenav"
@@ -59,17 +59,23 @@
       </button>
       <div class="app-title">Happy Way <mat-icon>favorite</mat-icon></div>
       <span class="fill-remaining-space"></span>
-      <app-sex-select *ngIf="loggedIn"></app-sex-select>
-      <button class="layout-button" mat-button (click)="shutdown()">
-        <mat-icon>power_off</mat-icon>
-        <span class="nav-caption">Завершить работу</span>
-      </button>
-      <button class="layout-small-button" mat-icon-button (click)="shutdown()">
-        <mat-icon>power_off</mat-icon>
-      </button>
+      <ng-container *ngIf="loggedIn">
+        <app-sex-select></app-sex-select>
+        <button class="layout-button" mat-button (click)="shutdown()">
+          <mat-icon>power_off</mat-icon>
+          <span class="nav-caption">Завершить работу</span>
+        </button>
+        <button class="layout-small-button" mat-icon-button (click)="shutdown()">
+          <mat-icon>power_off</mat-icon>
+        </button>
+      </ng-container>
     </mat-toolbar>
     <main>
       <router-outlet></router-outlet>
     </main>
+    <mat-divider></mat-divider>
+    <footer>
+      Copyright &copy; {{date | date: 'yyyy'}} Happy Way. Все права защищены.
+    </footer>
   </mat-sidenav-content>
 </mat-sidenav-container>
