--- a/HappyWayApp/ClientApp/src/app/components/login/login.component.css
+++ b/HappyWayApp/ClientApp/src/app/components/login/login.component.css
@@ -1,8 +1,8 @@
 :host {
   display: flex;
+  flex: 1;
   justify-content: center;
   align-items: center;
-  height: 100%;
 }
 
 .mat-form-field {
@@ -24,6 +24,11 @@ mat-card-content {
 }
 
 .button {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.card-actions {
   display: flex;
   justify-content: flex-end;
 }
