--- a/HappyWayApp/ClientApp/src/app/components/login/login.component.html
+++ b/HappyWayApp/ClientApp/src/app/components/login/login.component.html
@@ -15,7 +15,7 @@
       <p *ngIf="error" class="error">
         {{ error }}
       </p>
-      <div class="button">
+      <div class="card-actions">
         <button type="submit" mat-button>Войти</button>
       </div>
     </form>
