Fixed Create Event

--- a/HappyWayApp/ClientApp/src/app/components/home/home.component.html
+++ b/HappyWayApp/ClientApp/src/app/components/home/home.component.html
@@ -36,7 +36,7 @@
       </table>
     </mat-step>
   </mat-horizontal-stepper>
-  <div style="margin-top: 5px;">
+  <div *ngIf="stepper" style="margin-top: 5px;">
     <button mat-icon-button (click)="goBack()" [disabled]="stepper?.selectedIndex === 0">
       <mat-icon>navigate_before</mat-icon>
     </button>
