--- a/HappyWayApp/ClientApp/src/app/components/layout/layout.component.html
+++ b/HappyWayApp/ClientApp/src/app/components/layout/layout.component.html
@@ -1,4 +1,4 @@
-<mat-sidenav-container *blockUI="''; delayStart: 400; delayStop: 700;" class="sidenav-container">
+<mat-sidenav-container class="sidenav-container">
   <mat-sidenav
       #drawer
       class="sidenav"
@@ -79,3 +79,6 @@
     </footer>
   </mat-sidenav-content>
 </mat-sidenav-container>
+<app-progress-spinner [color]="'primary'" [mode]="'indeterminate'" [value]="50"
+                      [backdropEnabled]="true" [positionGloballyCenter]="true">
+</app-progress-spinner>
