--- a/HappyWayApp/ClientApp/src/app/components/layout/layout.component.html
+++ b/HappyWayApp/ClientApp/src/app/components/layout/layout.component.html
@@ -11,6 +11,10 @@
           <mat-icon>event</mat-icon>
           <span class="nav-caption">Мероприятия</span>
         </a>
+        <a mat-list-item routerLink="/event-places">
+          <mat-icon>domain</mat-icon>
+          <span class="nav-caption">Места мероприятий</span>
+        </a>
         <a mat-list-item routerLink="/users">
           <mat-icon>supervised_user_circle</mat-icon>
           <span class="nav-caption">Пользователи</span>
