--- a/HappyWayApp/ClientApp/src/app/components/validation-error/validation-error.component.html
+++ b/HappyWayApp/ClientApp/src/app/components/validation-error/validation-error.component.html
@@ -10,3 +10,6 @@
 <span *ngIf="control.hasError('email')">
   Поле "{{propertyName}}" - неверный e-mail.
 </span>
+<span *ngIf="control.hasError('type')">
+  Пожалуйста, заполните поле "{{propertyName}}" из списка.
+</span>
