--- a/HappyWayApp/ClientApp/src/app/components/dialogs/event-dialog/event-dialog.component.html
+++ b/HappyWayApp/ClientApp/src/app/components/dialogs/event-dialog/event-dialog.component.html
@@ -16,6 +16,14 @@
         </mat-select>
         <mat-error app-validation-error [control]="form.get('name')" propertyName="Название"></mat-error>
       </mat-form-field>
+      <mat-form-field>
+        <mat-select formControlName="eventPlaceId" placeholder="Место" required>
+          <mat-option *ngFor="let eventPlace of eventPlaces" [value]="eventPlace.id">
+            {{eventPlace.name}} ({{eventPlace.city.name}})
+          </mat-option>
+        </mat-select>
+        <mat-error app-validation-error [control]="form.get('eventPlaceId')" propertyName="Место"></mat-error>
+      </mat-form-field>
       <mat-form-field *ngIf="!editMode">
         <input matInput type="url" formControlName="docUrl" placeholder="URL документа" required>
         <mat-error app-validation-error [control]="form.get('docUrl')" propertyName="URL документа"></mat-error>
