--- a/HappyWayApp/ClientApp/src/app/components/events/events.component.html
+++ b/HappyWayApp/ClientApp/src/app/components/events/events.component.html
@@ -1,55 +1,60 @@
 <div class="table-controls">
   <button mat-raised-button (click)="add()">Добавить</button>
 </div>
-<table mat-table *ngIf="events && events.length > 0" [dataSource]="events"
-  class="mat-elevation-z8">
-  <ng-container matColumnDef="name">
-    <th mat-header-cell *matHeaderCellDef>Название</th>
-    <td mat-cell *matCellDef="let ev">{{ev.name}}</td>
-  </ng-container>
-  <ng-container matColumnDef="date">
-    <th mat-header-cell *matHeaderCellDef>Дата</th>
-    <td mat-cell *matCellDef="let ev">{{ev.date | date}}</td>
-  </ng-container>
-  <ng-container matColumnDef="user">
-    <th mat-header-cell *matHeaderCellDef>Пользователь</th>
-    <td mat-cell *matCellDef="let ev">{{ev.user}}</td>
-  </ng-container>
-<!--  <ng-container matColumnDef="active">-->
-<!--    <th mat-header-cell *matHeaderCellDef></th>-->
-<!--    <td mat-cell *matCellDef="let ev">-->
-<!--      <mat-radio-button (click)="$event.stopPropagation();"-->
-<!--                        [value]="ev"-->
-<!--                        [checked]="currentEvent?.id === ev?.id"-->
-<!--                        [disabled]="ev.completed"-->
-<!--                        (change)="currentEventChange($event)"></mat-radio-button>-->
-<!--    </td>-->
-<!--  </ng-container>-->
-  <ng-container matColumnDef="active">
-    <th mat-header-cell *matHeaderCellDef></th>
-    <td mat-cell *matCellDef="let ev">
-      <mat-icon *ngIf="currentEvent?.id === ev?.id">check</mat-icon>
-    </td>
-  </ng-container>
-  <ng-container matColumnDef="edit">
-    <th mat-header-cell *matHeaderCellDef></th>
-    <td mat-cell *matCellDef="let ev">
-      <button mat-icon-button (click)="$event.stopPropagation(); edit(ev)">
-        <mat-icon>edit</mat-icon>
-      </button>
-    </td>
-  </ng-container>
-  <ng-container matColumnDef="delete">
-    <th mat-header-cell *matHeaderCellDef></th>
-    <td mat-cell *matCellDef="let ev">
-      <button mat-icon-button (click)="$event.stopPropagation(); delete(ev);">
-        <mat-icon>delete</mat-icon>
-      </button>
-    </td>
-  </ng-container>
+<div class="scrollable-grid">
+  <table mat-table *ngIf="events && events.length > 0" [dataSource]="events" class="mat-elevation-z8">
+    <ng-container matColumnDef="name">
+      <th mat-header-cell *matHeaderCellDef>Название</th>
+      <td mat-cell *matCellDef="let ev">{{ev.name}}</td>
+    </ng-container>
+    <ng-container matColumnDef="eventPlace">
+      <th mat-header-cell *matHeaderCellDef>Место</th>
+      <td mat-cell *matCellDef="let ev">{{ev.eventPlace.name}} ({{ev.eventPlace.city.name}})</td>
+    </ng-container>
+    <ng-container matColumnDef="date">
+      <th mat-header-cell *matHeaderCellDef>Дата</th>
+      <td mat-cell *matCellDef="let ev">{{ev.date | date}}</td>
+    </ng-container>
+    <ng-container matColumnDef="user">
+      <th mat-header-cell *matHeaderCellDef>Пользователь</th>
+      <td mat-cell *matCellDef="let ev">{{ev.user}}</td>
+    </ng-container>
+    <!--  <ng-container matColumnDef="active">-->
+    <!--    <th mat-header-cell *matHeaderCellDef></th>-->
+    <!--    <td mat-cell *matCellDef="let ev">-->
+    <!--      <mat-radio-button (click)="$event.stopPropagation();"-->
+    <!--                        [value]="ev"-->
+    <!--                        [checked]="currentEvent?.id === ev?.id"-->
+    <!--                        [disabled]="ev.completed"-->
+    <!--                        (change)="currentEventChange($event)"></mat-radio-button>-->
+    <!--    </td>-->
+    <!--  </ng-container>-->
+    <ng-container matColumnDef="active">
+      <th mat-header-cell *matHeaderCellDef></th>
+      <td mat-cell *matCellDef="let ev">
+        <mat-icon *ngIf="currentEvent?.id === ev?.id">check</mat-icon>
+      </td>
+    </ng-container>
+    <ng-container matColumnDef="edit">
+      <th mat-header-cell *matHeaderCellDef></th>
+      <td mat-cell *matCellDef="let ev">
+        <button mat-icon-button (click)="$event.stopPropagation(); edit(ev)">
+          <mat-icon>edit</mat-icon>
+        </button>
+      </td>
+    </ng-container>
+    <ng-container matColumnDef="delete">
+      <th mat-header-cell *matHeaderCellDef></th>
+      <td mat-cell *matCellDef="let ev">
+        <button mat-icon-button (click)="$event.stopPropagation(); delete(ev);">
+          <mat-icon>delete</mat-icon>
+        </button>
+      </td>
+    </ng-container>
 
-  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row *matRowDef="let ev; columns: displayedColumns;"
-      [ngClass]="{'event-row': !ev.completed}"
-      (click)="eventClick(ev)"></tr>
-</table>
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let ev; columns: displayedColumns;"
+        [ngClass]="{'event-row': !ev.completed}"
+        (click)="eventClick(ev)"></tr>
+  </table>
+</div>
