--- a/HappyWayApp/ClientApp/src/app/components/users/users.component.html
+++ b/HappyWayApp/ClientApp/src/app/components/users/users.component.html
@@ -1,42 +1,39 @@
 <div class="table-controls">
   <button mat-raised-button (click)="add()">Добавить хостес</button>
 </div>
-<table mat-table *ngIf="users && users.length > 0" [dataSource]="users"
-       class="mat-elevation-z8">
-  <ng-container matColumnDef="username">
-    <th mat-header-cell *matHeaderCellDef>Имя пользователя</th>
-    <td mat-cell *matCellDef="let user">{{user.username}}</td>
-  </ng-container>
-  <ng-container matColumnDef="displayName">
-    <th mat-header-cell *matHeaderCellDef>ФИО</th>
-    <td mat-cell *matCellDef="let user">{{user.displayName}}</td>
-  </ng-container>
-  <ng-container matColumnDef="city">
-    <th mat-header-cell *matHeaderCellDef>Город</th>
-    <td mat-cell *matCellDef="let user">{{user.city}}</td>
-  </ng-container>
-  <ng-container matColumnDef="phoneNumber">
-    <th mat-header-cell *matHeaderCellDef>Телефон</th>
-    <td mat-cell *matCellDef="let user">{{user.phoneNumber}}</td>
-  </ng-container>
-  <ng-container matColumnDef="edit">
-    <th mat-header-cell *matHeaderCellDef></th>
-    <td mat-cell *matCellDef="let user">
-      <button mat-icon-button (click)="edit(user)">
-        <mat-icon>edit</mat-icon>
-      </button>
-    </td>
-  </ng-container>
-  <ng-container matColumnDef="delete">
-    <th mat-header-cell *matHeaderCellDef></th>
-    <td mat-cell *matCellDef="let user">
-      <button *ngIf="user.id !== currentUser.id && user.role !== role.Admin" mat-icon-button
-        (click)="delete(user)">
-        <mat-icon>delete</mat-icon>
-      </button>
-    </td>
-  </ng-container>
+<div class="scrollable-grid">
+  <table mat-table *ngIf="users && users.length > 0" [dataSource]="users" class="mat-elevation-z8">
+    <ng-container matColumnDef="username">
+      <th mat-header-cell *matHeaderCellDef>Имя пользователя</th>
+      <td mat-cell *matCellDef="let user">{{user.username}}</td>
+    </ng-container>
+    <ng-container matColumnDef="displayName">
+      <th mat-header-cell *matHeaderCellDef>ФИО</th>
+      <td mat-cell *matCellDef="let user">{{user.displayName}}</td>
+    </ng-container>
+    <ng-container matColumnDef="phoneNumber">
+      <th mat-header-cell *matHeaderCellDef>Телефон</th>
+      <td mat-cell *matCellDef="let user">{{user.phoneNumber}}</td>
+    </ng-container>
+    <ng-container matColumnDef="edit">
+      <th mat-header-cell *matHeaderCellDef></th>
+      <td mat-cell *matCellDef="let user">
+        <button mat-icon-button (click)="edit(user)">
+          <mat-icon>edit</mat-icon>
+        </button>
+      </td>
+    </ng-container>
+    <ng-container matColumnDef="delete">
+      <th mat-header-cell *matHeaderCellDef></th>
+      <td mat-cell *matCellDef="let user">
+        <button *ngIf="user.id !== currentUser.id && user.role !== role.Admin" mat-icon-button
+                (click)="delete(user)">
+          <mat-icon>delete</mat-icon>
+        </button>
+      </td>
+    </ng-container>
 
-  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row *matRowDef="let user; columns: displayedColumns;"></tr>
-</table>
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let user; columns: displayedColumns;"></tr>
+  </table>
+</div>
