--- a/HappyWayApp/ClientApp/src/app/components/dialogs/user-dialog/user-dialog.component.html
+++ b/HappyWayApp/ClientApp/src/app/components/dialogs/user-dialog/user-dialog.component.html
@@ -3,11 +3,12 @@
   <mat-dialog-content>
     <div class="dialog-container">
       <mat-form-field>
-        <input matInput formControlName="username" placeholder="Имя пользователя" autocomplete="nope">
+        <input matInput formControlName="username" placeholder="Имя пользователя" autocomplete="nope" required>
         <mat-error app-validation-error [control]="form.get('username')" propertyName="Имя пользователя"></mat-error>
       </mat-form-field>
       <mat-form-field>
-        <input matInput type="password" formControlName="password" placeholder="Пароль" autocomplete="new-password">
+        <input matInput type="password" formControlName="password" placeholder="Пароль" autocomplete="new-password"
+          [required]="!editMode">
         <mat-error app-validation-error [control]="form.get('password')" propertyName="Пароль"></mat-error>
       </mat-form-field>
       <mat-form-field>
