Added Cities Data

--- a/HappyWayApp/ClientApp/src/app/components/dialogs/event-place-dialog/event-place-dialog.component.html
+++ b/HappyWayApp/ClientApp/src/app/components/dialogs/event-place-dialog/event-place-dialog.component.html
@@ -30,6 +30,6 @@
 
 <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayCity">
   <mat-option *ngFor="let city of cities" [value]="city">
-    {{ city.name }}
+    <span>{{city.name}}<ng-container *ngIf="city.region"> ({{city.region}})</ng-container></span>
   </mat-option>
 </mat-autocomplete>
