--- a/HappyWayApp/ClientApp/src/app/components/event-places/event-places.component.html
+++ b/HappyWayApp/ClientApp/src/app/components/event-places/event-places.component.html
@@ -5,7 +5,9 @@
   <table mat-table *ngIf="eventPlaces && eventPlaces.length > 0" [dataSource]="eventPlaces" class="mat-elevation-z8">
     <ng-container matColumnDef="city">
       <th mat-header-cell *matHeaderCellDef>Город</th>
-      <td mat-cell *matCellDef="let eventPlace">{{eventPlace.city.name}}</td>
+      <td mat-cell *matCellDef="let eventPlace">
+        <span>{{eventPlace.city.name}}<ng-container *ngIf="eventPlace.city.region"> ({{eventPlace.city.region}})</ng-container></span>
+      </td>
     </ng-container>
     <ng-container matColumnDef="name">
       <th mat-header-cell *matHeaderCellDef>Название</th>
